--- a/ndrf/src/App.css
+++ b/ndrf/src/App.css
@@ -271,13 +271,17 @@ section {
 
 /* CSS for ImageSlider */
 .display {
-    border: 1px transparent white;
-    background-color: #eee7dd;
-    border-radius: 20px;
+    backdrop-filter: blur(11px) saturate(200%);
+    -webkit-backdrop-filter: blur(11px) saturate(200%);
+    background-color: rgba(255, 255, 255, 0.52);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    padding: 10px 20px;
     color: #000;
     font-size: 1.4rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
+    text-align: left;
 }
 
 .display-para {
